--- a/index.html
+++ b/index.html
@@ -6,50 +6,56 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" >
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
-  <header class="aaa">
-    <img src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+<body class="body">
+  <header class="header">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
   </header>
   <main>
-    <section class="centered-main-page-element">
-      <article id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <section class="section">
+      <article class="add-block">
+        <label class="add-block__label" for="new-task">Add Item</label>
+        <div class="add-block__wrapper">
+          <input id="new-task"class="block__input" type="text">
+          <button class="add-block__btn">Add</button>
         </div>
       </article>
-      <article>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="Remove button"></button>
+      <article class="todo-block">
+      <h3 class="todo-block__title">Todo</h3>
+      <ul id="incompleteTasks" class="todo-block__list list">
+        <li class="list__item">
+          <input class="list__input list__input_checkbox" type="checkbox">
+          <label class="list__label">Pay Bills</label>
+          <input type="text" class="list__input list__input_text">
+          <button class="list__edit-btn">Edit</button>
+          <button class="list__remove-btn">
+            <img class="list__remove-img" src="./remove.svg" alt="Remove button">
+          </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg" alt="Remove button"></button>
+        <li class="list__item list__item_textarea">
+          <input class="list__input list__input_checkbox" type="checkbox">
+          <label class="list__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="list__input list__input_text">
+          <button class="list__edit-btn">Save</button>
+          <button class="list__remove-btn">
+            <img class="list__remove-img" src="./remove.svg" alt="Remove button">
+          </button>
         </li>
       </ul>
       </article>
-      <article>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="Remove button"></button>
+      <article class="completed-block">
+      <h3 class="completed-block__title">Completed</h3>
+      <ul id="completed-tasks" class="completed-block__list list">
+        <li class="list__item">
+          <input class="list__input list__input_checkbox" type="checkbox" checked>
+          <label class="list__label">See the Doctor</label>
+          <input type="text" class="list__input list__input_text">
+          <button class="list__edit-btn">Edit</button>
+          <button class="list__remove-btn">
+            <img class="list__remove-img" src="./remove.svg" alt="Remove button">
+          </button>
         </li>
       </ul>
       </article>
