--- a/index.html
+++ b/index.html
@@ -16,44 +16,44 @@
   <main>
     <section class="section">
       <article class="add-block">
-        <label class="add-block__label" for="new-task">Add Item</label>
+        <label class="add-block__label label" for="new-task">Add Item</label>
         <div class="add-block__wrapper">
-          <input id="new-task"class="block__input" type="text">
-          <button class="add-block__btn">Add</button>
+          <input id="new-task"class="block__input input" type="text">
+          <button class="add-block__btn btn">Add</button>
         </div>
       </article>
       <article class="todo-block">
-      <h3 class="todo-block__title">Todo</h3>
+      <h3 class="todo-block__title title">Todo</h3>
       <ul id="incompleteTasks" class="todo-block__list list">
-        <li class="list__item">
-          <input class="list__input list__input_checkbox" type="checkbox">
-          <label class="list__label">Pay Bills</label>
-          <input type="text" class="list__input list__input_text">
-          <button class="list__edit-btn">Edit</button>
-          <button class="list__remove-btn">
+        <li class="list__item item">
+          <input class="list__input list__input_checkbox input" type="checkbox">
+          <label class="list__label label">Pay Bills</label>
+          <input type="text" class="list__input list__input_text input">
+          <button class="list__edit-btn btn">Edit</button>
+          <button class="list__remove-btn btn">
             <img class="list__remove-img" src="./remove.svg" alt="Remove button">
           </button>
         </li>
-        <li class="list__item list__item_textarea">
-          <input class="list__input list__input_checkbox" type="checkbox">
-          <label class="list__label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="list__input list__input_text">
-          <button class="list__edit-btn">Save</button>
-          <button class="list__remove-btn">
+        <li class="list__item list__item_textarea item">
+          <input class="list__input list__input_checkbox input" type="checkbox">
+          <label class="list__label label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="list__input list__input_text input">
+          <button class="list__edit-btn btn">Save</button>
+          <button class="list__remove-btn btn">
             <img class="list__remove-img" src="./remove.svg" alt="Remove button">
           </button>
         </li>
       </ul>
       </article>
       <article class="completed-block">
-      <h3 class="completed-block__title">Completed</h3>
+      <h3 class="completed-block__title title">Completed</h3>
       <ul id="completed-tasks" class="completed-block__list list">
-        <li class="list__item">
-          <input class="list__input list__input_checkbox" type="checkbox" checked>
-          <label class="list__label">See the Doctor</label>
-          <input type="text" class="list__input list__input_text">
-          <button class="list__edit-btn">Edit</button>
-          <button class="list__remove-btn">
+        <li class="list__item item">
+          <input class="list__input list__input_checkbox input" type="checkbox" checked>
+          <label class="list__label label">See the Doctor</label>
+          <input type="text" class="list__input list__input_text input">
+          <button class="list__edit-btn btn">Edit</button>
+          <button class="list__remove-btn btn">
             <img class="list__remove-img" src="./remove.svg" alt="Remove button">
           </button>
         </li>
